# apple-cryptokit-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: publish.yml
examples/: basic_usage.rs  simple_usage.rs
src/: error.rs  lib.rs
src/asymmetric/: curve25519.rs  mod.rs  p256.rs  p384.rs  p521.rs
src/authentication/: hmac.rs  mod.rs  sha1.rs  sha256.rs  sha384.rs  sha512.rs
src/hashing/: mod.rs  sha1.rs  sha256.rs  sha384.rs  sha512.rs
src/key_derivation/: hkdf_sha256.rs  hkdf_sha384.rs  hkdf_sha512.rs  mod.rs
src/keys/: mod.rs  shared_secret.rs  symmetric.rs
src/quantum/: kem.rs  mod.rs  signature.rs
src/symmetric/: aes.rs  chacha.rs  mod.rs
swift/: Package.swift
swift/Sources/: cryptokit.swift
swift/Sources/Asymmetric/: Curve25519.swift  P256.swift  P384.swift  P521.swift
swift/Sources/Authentication/: HMAC.swift
swift/Sources/Hashing/: Hashing.swift
swift/Sources/KeyDerivation/: HKDF.swift
swift/Sources/Keys/: SymmetricKeys.swift
swift/Sources/Quantum/: KEM.swift  Signature.swift
swift/Sources/Symmetric/: AES.swift  ChaCha20Poly1305.swift
tests/: asymmetric_tests.rs  authentication_tests.rs  hashing_tests.rs  key_derivation_tests.rs  keys_tests.rs  quantum_tests.rs  symmetric_tests.rs
